[package]
name = "cloud_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.15.0"
aws-sdk-ec2 = "0.15.0"
public-ip = "*"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "1"