[package]
name = "cloud_helper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "*"
aws-sdk-ec2 = "*"
config = "*"
public-ip = "*"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger = "0.11.7"

[dev-dependencies]
assert_cmd = "*"